# GameEngine2dPlus

./: Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.h  EntityManager.cpp  GameEngine.cpp  GameEngine.h  Physics.h  SceneMenu.cpp  SceneParallax.h  ScenePlay.cpp  ScenePlay.h  ScenePlayground.cpp  ScenePlayground.h  Test.cpp  Test.h  Vec2.cpp  Vec2.h  main.cpp
dependencies/: CMakeLists.txt
levels/: untitled.tiled-session
maps/: untitled.tiled-session  untitled.tmx
src/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Camera.h  ComponentManager1.h  Components.h  Components1.cpp  Components1.h  CoreManager.cpp  CoreManager.h  Entity.h  Entity1.cpp  Entity1.h  EntityComponent.cpp  EntityComponent.h  EntityFactory.cpp  EntityFactory.h  EntityManager.h  EntityManager1.h  FileReader.cpp  FileReader.h  GameEngine.cpp  GameEngine.h  Index.h  LevelEntityParser.cpp  LevelEntityParser.h  LevelLoader.cpp  LevelLoader.h  NewArchitectureScene.cpp  NewArchitectureScene.h  Physics.cpp  PlayerCamera.cpp  PlayerCamera.h  Scene.cpp  Scene.h  SceneBattle.cpp  SceneBattle.h  SceneMenu.cpp  (+14 more)
src/(deprecated)/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  Physics.cpp  Physics.h  ScenePlay.cpp  ScenePlay.h  ScenePlayground.cpp  ScenePlayground.h  TargetCamera.h
src/components/: Components.h
src/core/: Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  ComponentManager1.cpp  ComponentManager1.h  CoreManager.h  Entity1.cpp  Entity1.h  EntityManager1.h  GameEngine.cpp  GameEngine.h  SystemManager1.cpp  SystemManager1.h  Types.h  World.h
src/include/: PlayerInputSystem.h  System.h
src/math/: Physics1.cpp  Physics1.h  Vec2.cpp  Vec2.h
src/scenes/: Scene.cpp  Scene.h  SceneBattle.cpp  SceneBattle.h  SceneMenu.cpp  SceneMenu.h  SceneParallax.cpp  SceneParallax.h
src/systems/: AISystem.cpp  AISystem.h  CleanupSystem.cpp  CleanupSystem.h  DamageSystem.cpp  DamageSystem.h  DialogueSystem.cpp  DialogueSystem.h  GravitySystem.cpp  GravitySystem.h  HitboxSystem.cpp  HitboxSystem.h  LifespanSystem.cpp  LifespanSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerStateSystem.cpp  PlayerStateSystem.h  RenderSystem.cpp  RenderSystem.h  SpellCasterSystem.cpp  SpellCasterSystem.h
src/utils/: ImageLevelLoader1.cpp  ImageLevelLoader1.h  LevelLoader1.h  TiledParser1.cpp  TiledParser1.h  TilesetLevelLoader1.cpp  TilesetLevelLoader1.h  WorldObjectsLevelLoader1.cpp  WorldObjectsLevelLoader1.h
src/utils/TiledParser/: TiledParser.cpp  TiledParser.h
src/utils/entityPrefabParser/: ComponentParserRegistry.cpp  ComponentParserRegistry.h  EntityParser.cpp  EntityParser.h  RenderComponentParser.cpp  RenderComponentParser.h
src/utils/levelParser/: ImageLevelLoader.cpp  ImageLevelLoader.h  LevelLoader.h  TilesetLevelLoader.cpp  TilesetLevelLoader.h  WorldObjectsLevelLoader.h
