
set(SOURCE_FILES main.cpp
        core/GameEngine.h
        "(deprecated)/EntityManager.h"
        components/Components.h
        core/Animation.h
        core/Animation.cpp
        "(deprecated)/Entity.h"
        core/Action.h
        "(deprecated)/EntityManager.cpp"
        core/GameEngine.cpp
        core/Assets.cpp
        core/Assets.h
        "(deprecated)/Physics.h"
        scenes/Scene.cpp
        scenes/Scene.h
        scenes/SceneMenu.cpp
        scenes/SceneMenu.h
        math/Vec2.cpp
        math/Vec2.h
        "(deprecated)/ScenePlay.cpp"
        "(deprecated)/ScenePlay.h"
        "(deprecated)/Physics.cpp"
        core/GameEngine.cpp
        "(deprecated)/ScenePlayground.cpp"
        "(deprecated)/ScenePlayground.h"
        scenes/SceneParallax.cpp
        scenes/SceneParallax.h
        utils/levelParser/FileReader.cpp
        utils/levelParser/FileReader.h
        "(deprecated)/Camera.cpp"
        "(deprecated)/Camera.h"
        "(deprecated)/TargetCamera.cpp"
        "(deprecated)/TargetCamera.h"
        utils/levelParser/LevelLoader.cpp
        utils/levelParser/LevelLoader.h
        utils/levelParser/ImageLevelLoader.cpp
        utils/levelParser/ImageLevelLoader.h
        utils/levelParser/TilesetLevelLoader.cpp
        utils/levelParser/TilesetLevelLoader.h
        utils/levelParser/WorldObjectsLevelLoader.cpp
        utils/levelParser/WorldObjectsLevelLoader.h
        scenes/SceneBattle.cpp
        scenes/SceneBattle.h
        core/Entity1.h
        core/EntityManager1.h
        core/ComponentManager1.h
        core/ComponentManager1.cpp
        core/Entity1.cpp
        core/SystemManager1.cpp
        core/SystemManager1.h
        core/CoreManager.cpp
        core/CoreManager.h
        include/System.h
        systems/PlayerInputSystem.cpp
        systems/PlayerInputSystem.h
        systems/MovementSystem.cpp
        systems/MovementSystem.h
        systems/PhysicsSystem.cpp
        systems/PhysicsSystem.h
        math/Physics1.cpp
        math/Physics1.h
        core/Types.h
        systems/RenderSystem.cpp
        systems/RenderSystem.h
        systems/GravitySystem.cpp
        systems/GravitySystem.h
        systems/CleanupSystem.cpp
        systems/CleanupSystem.h
        systems/DamageSystem.cpp
        systems/DamageSystem.h
        systems/HitboxSystem.cpp
        systems/HitboxSystem.h
        systems/LifespanSystem.cpp
        systems/LifespanSystem.h
        systems/PlayerStateSystem.cpp
        systems/PlayerStateSystem.h
        utils/TiledParser1.cpp
        utils/TiledParser1.h
        systems/AISystem.cpp
        systems/AISystem.h
        core/World.h
        systems/SpellCasterSystem.cpp
        systems/SpellCasterSystem.h
        utils/entityPrefabParser/ComponentParserRegistry.h
        utils/entityPrefabParser/ComponentParserRegistry.cpp
        utils/entityPrefabParser/RenderComponentParser.cpp
        utils/entityPrefabParser/RenderComponentParser.h
        utils/entityPrefabParser/EntityParser.cpp
        utils/entityPrefabParser/EntityParser.h
        systems/DialogueSystem.cpp
        systems/DialogueSystem.h
        utils/TiledParser/TiledParser.cpp
        utils/TiledParser/TiledParser.h
)


add_executable(lightcasting ${SOURCE_FILES})
#target_include_directories(lightcasting PRIVATE toml++/include)
target_link_libraries(lightcasting PRIVATE ImGui-SFML::ImGui-SFML nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus )